--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,23 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="signup">#263238</color>
+    <color name="matt_white">#FAFAFA</color>
+    <color name="grey">#90A4AE</color>
+    <color name="base">#80D8FF</color>
+
+
+    <!--Dashboard colors-->
+
+    <!--Body and background colors-->
+    <color name="home_background">#f2f5f8</color>
+    <color name="banner_background">#F1E9CE</color>
+    <color name="banner_background_light">#56F1E9CE</color>
+
+    <!--cards colors-->
+    <color name="card1">#d4cbe5</color>
+    <color name="card2">#7adccf</color>
+    <color name="card3">#f7c59f</color>
+    <color name="card4">#b8d7f5</color>
+
 
 </resources>
