--- a/app/src/main/res/layout/activity_splash_screen2.xml
+++ b/app/src/main/res/layout/activity_splash_screen2.xml
@@ -9,10 +9,15 @@
 
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="60sp"
         android:layout_centerInParent="true"
-        android:text="Splash"/>
+        android:id="@+id/TextView1"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:text="Splash"
+        android:textSize="35dp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        />
+
 
 </RelativeLayout>
