--- a/app/src/main/res/layout/featured_card_design.xml
+++ b/app/src/main/res/layout/featured_card_design.xml
@@ -1,47 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="160dp"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="180dp"
     android:layout_height="300dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="2dp"
-    android:elevation="8dp"
-    android:layout_margin="10dp">
+    app:cardElevation="8dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="10dp"
-        android:orientation="vertical">
+    <RelativeLayout
+        android:layout_width="180dp"
+        android:layout_height="295dp"
+        android:padding="10dp">
 
         <ImageView
             android:id="@+id/featured_image"
-            android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:src="@drawable/card_4"
+            android:layout_width="160dp"
+            android:layout_height="200dp"
             android:scaleType="fitXY"/>
 
         <TextView
             android:id="@+id/featured_title"
+            android:layout_below="@+id/featured_image"
+            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="McDonalds's"
+            android:text="The Gravity of us"
+            android:textColor="@color/black"
             android:textSize="20sp"/>
 
-        <RatingBar
-            android:layout_width="wrap_content"
+<!--        <RatingBar-->
+<!--            android:id="@+id/mv_rating"-->
+<!--            android:layout_below="@+id/featured_desc"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:rating="3.5"-->
+<!--            style="@style/Widget.AppCompat.RatingBar.Small"/>-->
+
+
+        <TextView
+            android:id="@+id/mv_rating"
+            android:layout_below="@+id/featured_desc"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
-            android:rating="3.5"
-            style="@style/Widget.AppCompat.RatingBar.Small"/>
+            android:text="4.5 ⭐"
+            android:textColor="@color/black"/>
 
         <TextView
             android:id="@+id/featured_desc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="This place is very nice evry one should visit this place high quality food"/>
+            android:text="by Phil Stamper"
+            android:layout_below="@+id/featured_title"/>
 
 
+        <TextView
+            android:id="@+id/mv_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="₹ 450"
+            android:layout_below="@id/featured_desc"
+            android:layout_toRightOf="@id/mv_rating"/>
 
 
-    </LinearLayout>
+    </RelativeLayout>
 
-</androidx.cardview.widget.CardView>
+</RelativeLayout>
