--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,6 +38,7 @@
                         android:layout_width="match_parent">
 
                         <TextView
+                            android:id="@+id/Search"
                             android:layout_centerVertical="true"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="15dp"
@@ -75,51 +76,83 @@
 
                             <TextView
                                 android:id="@+id/Member"
-                                android:layout_width="wrap_content"
+                                android:layout_width="160dp"
                                 android:layout_height="wrap_content"
-                                android:text="Already a member ?"
+                                android:text="BestSellers"
+                                android:textAlignment="center"
                                 android:textColor="@color/black"
-                                android:textSize="16sp" />
+                                android:textSize="22sp"
+                                android:textStyle="bold"/>
 
                             <TextView
                                 android:id="@+id/Memberes"
-                                android:layout_width="wrap_content"
+                                android:layout_width="160dp"
                                 android:layout_height="wrap_content"
-                                android:text="Already a member ?"
+                                android:textAlignment="center"
+                                android:text="Editor's Choice"
                                 android:textColor="@color/black"
-                                android:textSize="16sp" />
+                                android:textSize="22sp"
+                                android:textStyle="bold" />
 
-                            <TextView
-                                android:id="@+id/Membere"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Already a member ?"
-                                android:textColor="@color/black"
-                                android:textSize="16sp" />
 
                             <TextView
                                 android:id="@+id/Memberee"
-                                android:layout_width="wrap_content"
+                                android:layout_width="160dp"
                                 android:layout_height="wrap_content"
-                                android:text="Already a member ?"
+                                android:textAlignment="center"
+                                android:text="Trending"
                                 android:textColor="@color/black"
-                                android:textSize="16sp" />
-
-                            <TextView
-                                android:id="@+id/Membesree"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Already a member ?"
-                                android:textColor="@color/black"
-                                android:textSize="16sp" />
+                                android:textSize="22sp"
+                                android:textStyle="bold" />
 
                         </LinearLayout>
 
                     </HorizontalScrollView>
 
-
-
                 </LinearLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:background="@color/banner_background_light">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:background="@color/home_background"
+                        android:id="@+id/featured_recycler"
+                        android:layout_height="300dp"
+                        android:layout_width="match_parent" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp">
+
+                    <TextView
+                        android:id="@+id/suggestion"
+                        android:layout_marginTop="20dp"
+                        android:layout_width="200dp"
+                        android:textAlignment="center"
+                        android:layout_height="wrap_content"
+                        android:text="Suggestion for you"
+                        android:textColor="@color/black"
+                        android:textSize="22sp"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:layout_marginTop="20dp"
+                        android:layout_toRightOf="@+id/suggestion"
+                        android:layout_width="200dp"
+                        android:layout_height="90dp"
+                        android:text="!"
+                        android:textColor="@color/base"
+                        android:textSize="27sp"
+                        android:textStyle="bold"/>
+
+
+                </RelativeLayout>
 
 
 
@@ -131,121 +164,18 @@
                     android:layout_marginLeft="20dp"
                     android:background="@color/banner_background_light">
 
-                    <LinearLayout
-                        android:background="@color/banner_background_light"
-                        android:id="@+id/featured_background"
-                        android:layout_height="300dp"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginEnd="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginStart="10dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_width="170dp"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginTop="50dp"
-                            android:layout_width="wrap_content"
-                            android:lineHeight="24sp"
-                            android:textAllCaps="true"
-                            android:textSize="25sp" />
-
-                        <TextView
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"
-                            android:layout_width="wrap_content"
-                            />
-
-                    </LinearLayout>
-
                     <androidx.recyclerview.widget.RecyclerView
                         android:background="@color/home_background"
-                        android:id="@+id/featured_recycler"
+                        android:id="@+id/MostViewedRecycler"
                         android:layout_height="300dp"
-                        android:layout_toRightOf="@id/featured_background"
                         android:layout_width="match_parent" />
 
                 </RelativeLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:orientation="vertical"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="20dp"
-                    android:paddingBottom="20dp">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-
-                            android:textAllCaps="true"
-                            android:textSize="20sp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerVertical="true"
-                            android:layout_marginRight="15dp" />
 
 
-                    </RelativeLayout>
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/most_viewed_recycler"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:orientation="vertical"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="20dp"
-                    android:paddingBottom="20dp">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-
-                            android:textAllCaps="true"
-                            android:textSize="20sp" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerVertical="true"
-                            android:layout_marginRight="15dp"
-                            />
 
 
-                    </RelativeLayout>
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/catogeries_recycler"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-
-                </LinearLayout>
 
 
             </LinearLayout>
