--- a/app/src/main/res/layout/categories_card_design.xml
+++ b/app/src/main/res/layout/categories_card_design.xml
@@ -1,32 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="250dp"
-    android:layout_height="150dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="8dp"
-    android:layout_margin="12sp">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="15dp"
-        android:background="@drawable/card_4">
+        android:id="@+id/SearchFrag"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
 
-        <TextView
-            android:id="@+id/catogeries_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Restaurant"
-            android:textSize="20sp"/>
 
         <ImageView
-            android:id="@+id/catogeries_image"
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"/>
+            android:paddingLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_height="40dp"
+            android:layout_width="45dp"
+            android:src="@drawable/ic_arrow_back" />
+
+        <RelativeLayout
+            android:background="@color/white"
+            android:elevation="8dp"
+            android:layout_height="40dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginLeft="70dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent">
+
+
+
+            <TextView
+                android:id="@+id/SearchBoooks"
+                android:layout_centerVertical="true"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_width="wrap_content"
+                android:text="Search Books, Authors" />
+
+            <ImageView
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_height="30dp"
+                android:layout_marginRight="15dp"
+                android:layout_width="30dp"
+                android:src="@drawable/ic_baseline_search_24" />
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
-</androidx.cardview.widget.CardView>
+    <RelativeLayout
+        android:id="@+id/filter"
+        android:layout_below="@+id/SearchFrag"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp">
+
+        <TextView
+            android:layout_marginLeft="14dp"
+            android:id="@+id/titlebooks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3 Titles in Fatafat books"
+            android:textColor="@color/black"
+            android:textSize="19sp"/>
+        <TextView
+            android:id="@+id/sort"
+            android:paddingLeft="20dp"
+            android:layout_toRightOf="@+id/titlebooks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sort: Popularity"
+            android:textColor="@color/black"
+            android:textSize="19sp"/>
+
+
+        <ImageView
+            android:layout_alignParentRight="true"
+            android:layout_height="30dp"
+            android:layout_marginRight="15dp"
+            android:layout_width="30dp"
+            android:src="@drawable/ic_filter" />
+
+
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:layout_below="@+id/filter"
+        android:layout_width="wrap_content"
+        android:layout_height="300dp"
+        android:padding="10dp">
+
+        <ImageView
+            android:id="@+id/catogeries_image"
+            android:layout_width="160dp"
+            android:layout_height="262dp"
+            android:scaleType="fitXY"/>
+
+        <TextView
+            android:id="@+id/catogeries_title"
+            android:layout_toRightOf="@+id/catogeries_image"
+            android:layout_marginLeft="12dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="The Gravity of us"
+            android:textColor="@color/black"
+            android:textSize="20sp"/>
+
+        <!--        <RatingBar-->
+        <!--            android:id="@+id/mv_rating"-->
+        <!--            android:layout_below="@+id/mv_desc"-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:rating="3.5"-->
+        <!--            style="@style/Widget.AppCompat.RatingBar.Small"/>-->
+
+
+        <TextView
+            android:id="@+id/mv_rating"
+            android:layout_below="@+id/mv_descP"
+            android:layout_marginLeft="12dp"
+            android:layout_toRightOf="@id/catogeries_image"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:text="4.5 ⭐"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"/>
+
+        <TextView
+            android:layout_marginLeft="12dp"
+            android:id="@+id/mv_descP"
+            android:layout_width="170dp"
+            android:layout_height="180dp"
+            android:text="by Phil Stamper"
+            android:layout_toRightOf="@+id/catogeries_image"
+            android:layout_below="@+id/catogeries_title"/>
+
+
+        <TextView
+            android:id="@+id/mv_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="₹ 450.0"
+            android:textSize="22sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_below="@id/mv_descP"
+            android:layout_toEndOf="@id/mv_rating"/>
+
+
+    </RelativeLayout>
+
+
+
+</RelativeLayout>
