--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,206 +1,228 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragment.SettingFragment">
 
-
-    <ImageView
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_height="20dp"
-        android:layout_width="20dp"
-        android:src="@drawable/ic_goback" />
-
     <RelativeLayout
-        android:id="@+id/main7"
-        android:padding="30dp"
         android:layout_width="match_parent"
-        android:layout_height="120dp">
+        android:layout_height="match_parent">
+
+
+
+        <ImageView
+            android:id="@+id/comeback"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_height="20dp"
+            android:layout_width="20dp"
+            android:src="@drawable/ic_goback" />
+
+        <RelativeLayout
+            android:id="@+id/main7"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:padding="30dp">
 
 
             <ImageView
+                android:id="@+id/display"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_height="50dp"
-                android:layout_width="50dp"
                 android:src="@drawable/ic_mobile" />
 
 
             <TextView
+                android:id="@+id/display1"
+                android:layout_width="150dp"
+                android:layout_height="20dp"
+                android:layout_marginLeft="70dp"
+                android:layout_marginTop="10dp"
+                android:text="Display"
+                android:textColor="@color/black" />
+
+
+            <TextView
+                android:id="@+id/display2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="70dp"
+                android:layout_marginTop="34dp"
+                android:text="Adaptive Brightness is ON"
+                android:textSize="10sp" />
+
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_below="@+id/main7"
+            android:id="@+id/main8"
+            android:padding="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="120dp">
+
+
+            <ImageView
+                android:layout_marginLeft="10dp"
+                android:id="@+id/autosave"
+                android:layout_marginTop="10dp"
+                android:layout_height="50dp"
+                android:layout_width="50dp"
+                android:src="@drawable/ic_autosave" />
+
+
+            <TextView
+                android:id="@+id/autosave1"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="70dp"
                 android:layout_width="150dp"
                 android:layout_height="20dp"
-                android:text="Display"
+                android:text="AutoSave"
                 android:textColor="@color/black"/>
 
 
             <TextView
+                android:id="@+id/autosave2"
                 android:layout_marginTop="34dp"
                 android:layout_marginLeft="70dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Adaptive Brightness is ON"
+                android:text="Auto save is ON"
                 android:textSize="10sp"
                 />
 
 
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_below="@+id/main7"
-        android:id="@+id/main8"
-        android:padding="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="120dp">
+        </RelativeLayout>
 
 
-        <ImageView
-            android:layout_marginLeft="10dp"
-            android:id="@+id/gauthamimg"
-            android:layout_marginTop="10dp"
-            android:layout_height="50dp"
-            android:layout_width="50dp"
-            android:src="@drawable/ic_autosave" />
+        <RelativeLayout
+            android:layout_below="@+id/main8"
+            android:id="@+id/main9"
+            android:padding="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="120dp">
 
 
-        <TextView
-            android:id="@+id/gautham"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="70dp"
-            android:layout_width="150dp"
-            android:layout_height="20dp"
-            android:text="AutoSave"
-            android:textColor="@color/black"/>
+            <ImageView
+                android:id="@+id/language"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_height="50dp"
+                android:layout_width="50dp"
+                android:src="@drawable/ic_language" />
 
 
-        <TextView
-            android:layout_marginTop="34dp"
-            android:layout_marginLeft="70dp"
-            android:id="@+id/gauthamm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Auto save is ON"
-            android:textSize="10sp"
-            />
+            <TextView
+                android:id="@+id/language1"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="70dp"
+                android:layout_width="150dp"
+                android:layout_height="20dp"
+                android:text="Languages"
+                android:textColor="@color/black"/>
 
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/language2"
+                android:layout_marginTop="34dp"
+                android:layout_marginLeft="70dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="English"
+                android:textSize="10sp"
+                />
 
 
-    <RelativeLayout
-        android:layout_below="@+id/main8"
-        android:id="@+id/main9"
-        android:padding="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="120dp">
+        </RelativeLayout>
 
 
-        <ImageView
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_height="50dp"
-            android:layout_width="50dp"
-            android:src="@drawable/ic_language" />
+        <RelativeLayout
+            android:layout_below="@+id/main9"
+            android:id="@+id/main10"
+            android:padding="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="120dp">
 
 
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="70dp"
-            android:layout_width="150dp"
-            android:layout_height="20dp"
-            android:text="Languages"
-            android:textColor="@color/black"/>
+            <ImageView
+                android:id="@+id/notfiy"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_height="50dp"
+                android:layout_width="50dp"
+                android:src="@drawable/ic_notification" />
 
 
-        <TextView
-            android:layout_marginTop="34dp"
-            android:layout_marginLeft="70dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="English"
-            android:textSize="10sp"
-            />
+            <TextView
+                android:id="@+id/notfiy1"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="70dp"
+                android:layout_width="150dp"
+                android:layout_height="20dp"
+                android:text="Notifications"
+                android:textColor="@color/black"/>
 
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/notfiy2"
+                android:layout_marginTop="34dp"
+                android:layout_marginLeft="70dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2 apps blocked from sending"
+                android:textSize="10sp"
+                />
 
 
-    <RelativeLayout
-        android:layout_below="@+id/main9"
-        android:id="@+id/main10"
-        android:padding="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="120dp">
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_below="@+id/main10"
+            android:id="@+id/main11"
+            android:padding="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="120dp">
 
 
-        <ImageView
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_height="50dp"
-            android:layout_width="50dp"
-            android:src="@drawable/ic_notification" />
+            <ImageView
+                android:id="@+id/appinfo"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/ic_error" />
+
+            <TextView
+                android:id="@+id/appinfo1"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="70dp"
+                android:layout_width="150dp"
+                android:layout_height="20dp"
+                android:text="App info"
+                android:textColor="@color/black"/>
 
 
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="70dp"
-            android:layout_width="150dp"
-            android:layout_height="20dp"
-            android:text="Notifications"
-            android:textColor="@color/black"/>
+            <TextView
+                android:id="@+id/appinfo2"
+                android:layout_marginTop="34dp"
+                android:layout_marginLeft="70dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2 apps blocked from sending"
+                android:textSize="10sp"
+                />
 
 
-        <TextView
-            android:layout_marginTop="34dp"
-            android:layout_marginLeft="70dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2 apps blocked from sending"
-            android:textSize="10sp"
-            />
+        </RelativeLayout>
 
 
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_below="@+id/main10"
-        android:id="@+id/main11"
-        android:padding="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="120dp">
-
-
-        <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/ic_error" />
-
-        <TextView
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="70dp"
-            android:layout_width="150dp"
-            android:layout_height="20dp"
-            android:text="Display"
-            android:textColor="@color/black"/>
-
-
-        <TextView
-            android:layout_marginTop="34dp"
-            android:layout_marginLeft="70dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2 apps blocked from sending"
-            android:textSize="10sp"
-            />
 
 
     </RelativeLayout>
 
 
 
-</RelativeLayout>
+</ScrollView>
