--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -115,8 +115,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:layout_marginLeft="20dp"
-                    android:background="@color/banner_background_light">
+                    android:layout_marginLeft="20dp">
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:background="@color/home_background"
@@ -124,13 +123,10 @@
                         android:layout_height="300dp"
                         android:layout_width="match_parent" />
 
-                </RelativeLayout>
 
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp">
 
                     <TextView
+                        android:layout_below="@+id/featured_recycler"
                         android:id="@+id/suggestion"
                         android:layout_marginTop="20dp"
                         android:layout_width="200dp"
@@ -142,41 +138,26 @@
                         android:textStyle="bold"/>
 
                     <TextView
+                        android:id="@+id/ex"
+                        android:layout_below="@+id/featured_recycler"
                         android:layout_marginTop="20dp"
                         android:layout_toRightOf="@+id/suggestion"
                         android:layout_width="200dp"
-                        android:layout_height="90dp"
+                        android:layout_height="wrap_content"
                         android:text="!"
                         android:textColor="@color/base"
                         android:textSize="27sp"
                         android:textStyle="bold"/>
 
-
-                </RelativeLayout>
-
-
-
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginLeft="20dp"
-                    android:background="@color/banner_background_light">
-
                     <androidx.recyclerview.widget.RecyclerView
+                        android:layout_below="@+id/ex"
                         android:background="@color/home_background"
                         android:id="@+id/MostViewedRecycler"
-                        android:layout_height="300dp"
+                        android:layout_height="match_parent"
                         android:layout_width="match_parent" />
 
+
                 </RelativeLayout>
-
-
-
-
-
-
 
             </LinearLayout>
 
