--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -22,10 +22,10 @@
                 android:elevation="8dp"
                 android:layout_height="40dp"
                 android:layout_marginBottom="20dp"
-                android:layout_marginLeft="70dp"
+                android:layout_marginLeft="35dp"
                 android:layout_marginRight="40dp"
                 android:layout_marginTop="20dp"
-                android:layout_width="match_parent">
+                android:layout_width="600dp">
 
 
 
