--- a/app/src/main/res/layout/activity_user_dashboard.xml
+++ b/app/src/main/res/layout/activity_user_dashboard.xml
@@ -8,20 +8,27 @@
 
 
     <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom"
-        android:id="@+id/fragment_container"/>
+        android:layout_above="@+id/bottom" />
 
 
+
+    <ImageButton
+        android:layout_width="50dp"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:background="@color/base"/>
 
     <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
         android:id="@+id/bottom"
-        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
 
-        >
+
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
@@ -35,253 +42,6 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-<!--    <LinearLayout-->
-<!--        android:id="@+id/content"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:orientation="vertical"-->
-<!--        android:background="@color/home_background">-->
-
-
-<!--        <ScrollView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent">-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:orientation="vertical">-->
-
-<!--                <RelativeLayout-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_width="match_parent">-->
-
-<!--                    <RelativeLayout-->
-<!--                        android:background="@color/white"-->
-<!--                        android:elevation="8dp"-->
-<!--                        android:layout_height="40dp"-->
-<!--                        android:layout_marginBottom="20dp"-->
-<!--                        android:layout_marginLeft="40dp"-->
-<!--                        android:layout_marginRight="40dp"-->
-<!--                        android:layout_marginTop="20dp"-->
-<!--                        android:layout_width="match_parent">-->
-
-<!--                        <TextView-->
-<!--                            android:layout_centerVertical="true"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:layout_marginLeft="15dp"-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:text="Search Books, Authors" />-->
-
-<!--                        <ImageView-->
-<!--                            android:layout_alignParentRight="true"-->
-<!--                            android:layout_centerVertical="true"-->
-<!--                            android:layout_height="30dp"-->
-<!--                            android:layout_marginRight="15dp"-->
-<!--                            android:layout_width="30dp"-->
-<!--                            android:src="@drawable/ic_baseline_search_24" />-->
-
-<!--                    </RelativeLayout>-->
-
-<!--                </RelativeLayout>-->
-
-
-<!--                <LinearLayout-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="30dp"-->
-<!--                    android:orientation="horizontal">-->
-
-<!--                    <HorizontalScrollView-->
-<!--                        android:id="@+id/view"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="match_parent"-->
-<!--                        android:scrollbars="none">-->
-
-<!--                        <LinearLayout-->
-<!--                            android:layout_width="match_parent"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:orientation="horizontal">-->
-
-<!--                        <TextView-->
-<!--                            android:id="@+id/Member"-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:text="Already a member ?"-->
-<!--                            android:textColor="@color/black"-->
-<!--                            android:textSize="16sp" />-->
-
-<!--                        <TextView-->
-<!--                            android:id="@+id/Memberes"-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:text="Already a member ?"-->
-<!--                            android:textColor="@color/black"-->
-<!--                            android:textSize="16sp" />-->
-
-<!--                        <TextView-->
-<!--                            android:id="@+id/Membere"-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:text="Already a member ?"-->
-<!--                            android:textColor="@color/black"-->
-<!--                            android:textSize="16sp" />-->
-
-<!--                        <TextView-->
-<!--                            android:id="@+id/Memberee"-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:text="Already a member ?"-->
-<!--                            android:textColor="@color/black"-->
-<!--                            android:textSize="16sp" />-->
-
-<!--                            <TextView-->
-<!--                                android:id="@+id/Membesree"-->
-<!--                                android:layout_width="wrap_content"-->
-<!--                                android:layout_height="wrap_content"-->
-<!--                                android:text="Already a member ?"-->
-<!--                                android:textColor="@color/black"-->
-<!--                                android:textSize="16sp" />-->
-
-<!--                        </LinearLayout>-->
-
-<!--                    </HorizontalScrollView>-->
-
-
-
-<!--                </LinearLayout>-->
-
-
-
-
-<!--                <RelativeLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginTop="20dp"-->
-<!--                    android:layout_marginLeft="20dp"-->
-<!--                    android:background="@color/banner_background_light">-->
-
-<!--                    <LinearLayout-->
-<!--                        android:background="@color/banner_background_light"-->
-<!--                        android:id="@+id/featured_background"-->
-<!--                        android:layout_height="300dp"-->
-<!--                        android:layout_marginBottom="10dp"-->
-<!--                        android:layout_marginEnd="10dp"-->
-<!--                        android:layout_marginLeft="10dp"-->
-<!--                        android:layout_marginRight="10dp"-->
-<!--                        android:layout_marginStart="10dp"-->
-<!--                        android:layout_marginTop="10dp"-->
-<!--                        android:layout_width="170dp"-->
-<!--                        android:orientation="vertical">-->
-
-<!--                        <TextView-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:layout_marginLeft="10dp"-->
-<!--                            android:layout_marginTop="50dp"-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:lineHeight="24sp"-->
-<!--                            android:textAllCaps="true"-->
-<!--                            android:textSize="25sp" />-->
-
-<!--                        <TextView-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:layout_margin="10dp"-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                             />-->
-
-<!--                    </LinearLayout>-->
-
-<!--                    <androidx.recyclerview.widget.RecyclerView-->
-<!--                        android:background="@color/home_background"-->
-<!--                        android:id="@+id/featured_recycler"-->
-<!--                        android:layout_height="300dp"-->
-<!--                        android:layout_toRightOf="@id/featured_background"-->
-<!--                        android:layout_width="match_parent" />-->
-
-<!--                </RelativeLayout>-->
-
-<!--                <LinearLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginTop="30dp"-->
-<!--                    android:orientation="vertical"-->
-<!--                    android:paddingLeft="20dp"-->
-<!--                    android:paddingTop="20dp"-->
-<!--                    android:paddingBottom="20dp">-->
-
-<!--                    <RelativeLayout-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content">-->
-
-<!--                        <TextView-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:layout_marginLeft="10dp"-->
-
-<!--                            android:textAllCaps="true"-->
-<!--                            android:textSize="20sp" />-->
-
-<!--                        <TextView-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:layout_alignParentRight="true"-->
-<!--                            android:layout_centerVertical="true"-->
-<!--                            android:layout_marginRight="15dp" />-->
-
-
-<!--                    </RelativeLayout>-->
-
-<!--                    <androidx.recyclerview.widget.RecyclerView-->
-<!--                        android:id="@+id/most_viewed_recycler"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content" />-->
-
-<!--                </LinearLayout>-->
-
-<!--                <LinearLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_marginTop="30dp"-->
-<!--                    android:orientation="vertical"-->
-<!--                    android:paddingLeft="20dp"-->
-<!--                    android:paddingTop="20dp"-->
-<!--                    android:paddingBottom="20dp">-->
-
-<!--                    <RelativeLayout-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content">-->
-
-<!--                        <TextView-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:layout_marginLeft="10dp"-->
-
-<!--                            android:textAllCaps="true"-->
-<!--                            android:textSize="20sp" />-->
-
-<!--                        <TextView-->
-<!--                            android:layout_width="wrap_content"-->
-<!--                            android:layout_height="wrap_content"-->
-<!--                            android:layout_alignParentRight="true"-->
-<!--                            android:layout_centerVertical="true"-->
-<!--                            android:layout_marginRight="15dp"-->
-<!-- />-->
-
-
-<!--                    </RelativeLayout>-->
-
-<!--                    <androidx.recyclerview.widget.RecyclerView-->
-<!--                        android:id="@+id/catogeries_recycler"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content" />-->
-
-<!--                </LinearLayout>-->
-
-
-<!--            </LinearLayout>-->
-
-<!--        </ScrollView>-->
-
-<!--    </LinearLayout>-->
 
 
 </RelativeLayout>
